tests/snapshots/execution_spec__test-upstream-headers.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 11
        },
        {
          "id": 3
        }
      ]
    }
  }
}
