tests/snapshots/execution_spec__test-upstream-headers.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(allowedHeaders: ["X-bar", "x-foo"], baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Post {
  id: Int
}

type Query {
  posts: [Post] @http(path: "/posts")
}
