tests/snapshots/execution_spec__test-upstream.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @upstream(proxy: {url: "http://localhost:8085"}) {
  query: Query
}

type Query {
  hello: String @http(baseURL: "http://localhost:8000", path: "/hello")
}
