tests/snapshots/execution_spec__undeclared-type-no-base-url.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No base URL defined",
    "trace": [
      "Query",
      "users",
      "@http"
    ],
    "description": null
  },
  {
    "message": "Undeclared type 'User' was found",
    "trace": [
      "Query",
      "users"
    ],
    "description": null
  }
]
