tests/snapshots/execution_spec__upstream-batching.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "u1": {
        "id": 1
      },
      "u2": {
        "id": 2
      }
    }
  }
}
