tests/snapshots/execution_spec__upstream-fail-request.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "locations": [
          {
            "column": 9,
            "line": 1
          }
        ],
        "message": "IOException: Status code error"
      }
    ]
  }
}
