tests/snapshots/execution_spec__upstream-fail-request.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  user: User
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
